<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:enabled="false"
    android:orientation="vertical" >

    <androidx.core.widget.NestedScrollView
        android:id="@+id/vscorll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:overScrollMode="never" >

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="16dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edittext1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:autofillHints="example@example.com"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/textfield_1_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#9E9E9E"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="#e0e0e0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edittext2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/textfield_2_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="#9E9E9E"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/password_show_toggle"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="10dp"
                    android:padding="2dp"
                    android:src="@drawable/ion_eye"
                    android:visibility="gone" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="12dp"
                android:text="@string/button_login"
                app:cornerRadius="16dp"
                app:elevation="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="12dp"
                android:text="@string/button_signup"
                app:cornerRadius="16dp"
                app:elevation="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forgot_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="12dp"
                android:text="@string/button_forgot_password"
                app:cornerRadius="16dp"
                app:elevation="0dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>